tests/extensions/forLoops/valid/forPrintLoopSideEffect1.wacc
# Prints i having each element in single line.

# Output:
# 0
# 1
# 2
# 3
# 4
# 5
# 6
# 7
# 8
# 9
# 10

begin
	for (int i = 0; i < 11; i = i + 1) do
		println i 
	done
end